feat: Deploy User Activation
